test/files/neg/t0764.check
t0764.scala:13: error: type mismatch;
<<<<<<< HEAD
 found   : java.lang.Object with Node{type T = _1.type} where val _1: Node{type T = NextType}
=======
 found   : Object with Node{type T = _1.type} where val _1: Node{type T = NextType}
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
 required: Node{type T = Main.this.AType}
	new Main[AType]( (value: AType).prepend )
                                        ^
one error found
